--- a/html/index.html
+++ b/html/index.html
@@ -9,13 +9,14 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./images/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/favicon/favicon-32x32.png"/>
     <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/favicon/favicon-16x16.png"/>
-    <link rel="preload" href="/fonts/Montserrat/Montserrat-Regular.woff" as="font" type="font/woff" crossorigin="">
-    <link rel="preload" href="/fonts/Montserrat/Montserrat-Regular.ttf" as="font" type="font/ttf" crossorigin="">
-    <link rel="stylesheet" type="text/css" href="./css/lib.min.css">
+    <link rel="preload" href="/fonts/Rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin="">
+    <link rel="preload" href="/fonts/Rubik/Rubik-Bold.ttf" as="font" type="font/ttf" crossorigin="">
     <link rel="stylesheet" type="text/css" href="./css/common.min.css">
     <link rel="stylesheet" href="./css/home-page.min.css">
 </head>
 <body>
+
+
 <div class="wrapper">
     <header class="header header__main">
         <div class="container">
