--- a/html/index.html
+++ b/html/index.html
@@ -3,96 +3,57 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="format-detection" content="telephone=no"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
     <title>Home</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./images/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/favicon/favicon-32x32.png"/>
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/favicon/favicon-16x16.png"/>
-    <link rel="preload" href="/fonts/Rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin="">
-    <link rel="preload" href="/fonts/Rubik/Rubik-Bold.ttf" as="font" type="font/ttf" crossorigin="">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="preload" href="./fonts/Rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin="">
+    <link rel="preload" href="./fonts/Rubik/Rubik-Bold.ttf" as="font" type="font/ttf" crossorigin="">
     <link rel="stylesheet" type="text/css" href="./css/common.min.css">
     <link rel="stylesheet" href="./css/home-page.min.css">
 </head>
 <body>
-
-
 <div class="wrapper">
     <header class="header header__main">
-        <div class="container">
-
-        </div>
+        <div class="container"></div>
     </header>
     <main class="main">
-        <div class="container">
-            <h1>h1 title</h1>
+        <div class="container"><h1>h1 title</h1>
             <h2>h2 title</h2>
-            <h3>h3 title</h3>
-            <h4>h4 title</h4>
-            <p>text</p>
-        </div>
+            <h3>h3 title</h3><h4>h4 title</h4>
+            <p>text</p></div>
     </main>
     <footer class="footer">
         <div class="footer__container container">
             <div class="footer__inner">
                 <div class="footer__left">
-
-                    <div class="footer_logo logo">
-                        <img src="./images/logo.svg" alt="logo" width="123" height="48">
-                    </div>
-
-                    <h4 class="h4-title footer__sub-title">
-                        Мы поможем вам купить автомобиль из германии
-                    </h4>
-                </div>
+                    <div class="footer_logo logo"><img src="./images/logo.svg" alt="logo" width="123" height="48"></div>
+                    <h4 class="h4-title footer__sub-title">Мы поможем вам купить автомобиль из германии</h4></div>
                 <ul class="footer__list">
-
-
-                    <li class="footer__link">
-                        <a href="#">Грузовые автомобили</a>
-                    </li>
-
-                    <li class="footer__link">
-                        <a href="#">Наши работы</a>
-                    </li>
-
-                    <li class="footer__link">
-                        <a href="#">Отзывы</a>
-                    </li>
-
-                    <li class="footer__link">
-                        <a href="#">Пользовательское соглашение</a>
-                    </li>
-
-                    <li class="footer__link">
-                        <a href="#">Калькулятора</a>
-                    </li>
-
-                    <li class="footer__link">
-                        <a href="#">Контакты</a>
-                    </li>
-
+                    <li class="footer__link"><a href="#">Грузовые автомобили</a></li>
+                    <li class="footer__link"><a href="#">Наши работы</a></li>
+                    <li class="footer__link"><a href="#">Отзывы</a></li>
+                    <li class="footer__link"><a href="#">Пользовательское соглашение</a></li>
+                    <li class="footer__link"><a href="#">Калькулятора</a></li>
+                    <li class="footer__link"><a href="#">Контакты</a></li>
                 </ul>
                 <div class="footer__right">
                     <div class="footer__address">
                         <address class="footer__address-item">
                             <div class="footer__icon-wrapper">
-
                                 <svg class="icon footer__icon" width="12" height="16">
                                     <use href="./i/sprite.svg#icon-map"></use>
                                 </svg>
-
                             </div>
                             <p class="footer__text">Германия, город ровных дорог, улица прямых решений, офисный дом 5,
-                                зал с троном 4</p>
-                        </address>
+                                зал с троном 4</p></address>
                         <address class="footer__address-item">
                             <div class="footer__icon-wrapper">
-
                                 <svg class="icon footer__icon" width="18" height="18">
                                     <use href="./i/sprite.svg#icon-phone"></use>
                                 </svg>
-
                             </div>
                             <ul>
                                 <li><a href="tel:+077774456134" class="footer__text footer__phone">+07 777 44 56 134</a>
@@ -113,11 +74,8 @@
         </div>
     </footer>
 </div>
-
-
 <script src="js/jquery.min.js"></script>
-<script src="js/main.js"></script>
-<!-- navigation js -->
+<script src="js/main.js"></script><!-- navigation js -->
 <script src="js/navigation.js"></script>
 </body>
 </html>
