--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <title>Home</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/favicon/favicon-16x16.png">
     <link rel="preload" href="./fonts/Rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin="">
     <link rel="preload" href="./fonts/Rubik/Rubik-Bold.ttf" as="font" type="font/ttf" crossorigin="">
     <link rel="stylesheet" type="text/css" href="./css/common.min.css">
@@ -29,7 +26,8 @@
         <div class="footer__container container">
             <div class="footer__inner">
                 <div class="footer__left">
-                    <div class="footer_logo logo"><img src="./images/logo.svg" alt="logo" width="123" height="48"></div>
+                    <div class="footer__logo logo"><img src="./images/logo.svg" alt="logo" width="123" height="48">
+                    </div>
                     <h4 class="h4-title footer__sub-title">Мы поможем вам купить автомобиль из германии</h4></div>
                 <ul class="footer__list">
                     <li class="footer__link"><a href="#">Грузовые автомобили</a></li>
