--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,26 @@
-<!DOCTYPE html><html lang="ru"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta name="format-detection" content="telephone=no"><title>Главная</title><link rel="apple-touch-icon" sizes="180x180" href="./images/images/favicon/apple-touch-icon.png"><link rel="icon" type="image/x-icon" sizes="32x32" href="./images/favicon/favicon-32x32.png"><link rel="icon" type="image/x-icon" sizes="16x16" href="./images/favicon/favicon-16x16.png"><link rel="preload" href="./fonts/Rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin=""><link rel="preload" href="./fonts/Rubik/Rubik-Bold.ttf" as="font" type="font/ttf" crossorigin=""><link rel="stylesheet" type="text/css" href="./css/common.min.css"><link rel="stylesheet" href="./css/home-page.min.css"></head><body><div class="wrapper"><header class="header header__main"><div class="container"><div class="header__inner row"><nav class="header__left"><button class="header__burger js-burger-menu"><span></span></button><!-- <?php wp_nav_menu(
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <title>Главная</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="preload" href="./fonts/Rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin="">
+    <link rel="preload" href="./fonts/Rubik/Rubik-Bold.ttf" as="font" type="font/ttf" crossorigin="">
+    <link rel="stylesheet" type="text/css" href="./css/common.min.css">
+    <link rel="stylesheet" href="./css/home-page.min.css">
+</head>
+<body>
+<div class="wrapper">
+    <header class="header header__main">
+        <div class="container">
+            <div class="header__inner row">
+                <nav class="header__left">
+                    <button class="header__burger js-burger-menu"><span></span></button><!-- <?php wp_nav_menu(
                         array(
                             'theme_location' => 'header-menu',
                             'menu_id' => 'primary-menu-1',
@@ -6,7 +28,32 @@
                             'menu_class' => 'header__desktop-menu menu',
                             'menu_item_class' => 'menu__item',
                         )
-                    ); ?> --><ul class="header__desktop-menu menu"><li class="menu__item"><a href="#">Грузовые автомобили</a></li><li class="menu__item"><a href="#">Наши работы</a></li><li class="menu__item"><a href="#">Отзывы</a></li><li class="menu__item"><a href="#">Калькулятора</a></li><li class="menu__item"><a href="#">Контакты</a></li></ul></nav><div class="header__right"><button type="button" class="header__link">Заказать авто</button><div class="header__dropdown js-dropdown-block"><button class="header__lang header__lang-active js-button-dropdown">EN <svg class="icon" width="9" height="8"><use href="./i/sprite.svg#icon-arrow-down"></use></svg></button><ul class="header__lang-list js-dropdown-item"><li class="header__lang-item"><a class="header__lang" href="">RU</a></li></ul></div></div></div></div><div class="header__modal js-header-modal"><span class="logo"><img src="./images/logo-dark.svg" alt="Лого" width="123" height="48"> </span><!-- <?php wp_nav_menu(
+                    ); ?> -->
+                    <ul class="header__desktop-menu menu">
+                        <li class="menu__item"><a href="#">Грузовые автомобили</a></li>
+                        <li class="menu__item"><a href="#">Наши работы</a></li>
+                        <li class="menu__item"><a href="#">Отзывы</a></li>
+                        <li class="menu__item"><a href="#">Калькулятора</a></li>
+                        <li class="menu__item"><a href="#">Контакты</a></li>
+                    </ul>
+                </nav>
+                <div class="header__right">
+                    <button type="button" class="header__link">Заказать авто</button>
+                    <div class="header__dropdown js-dropdown-block">
+                        <button class="header__lang header__lang-active js-button-dropdown">EN
+                            <svg class="icon" width="9" height="8">
+                                <use href="./i/sprite.svg#icon-arrow-down"></use>
+                            </svg>
+                        </button>
+                        <ul class="header__lang-list js-dropdown-item">
+                            <li class="header__lang-item"><a class="header__lang" href="">RU</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header__modal js-header-modal"><span class="logo"><img src="./images/logo-dark.svg" alt="Лого"
+                                                                           width="123" height="48"> </span><!-- <?php wp_nav_menu(
         array(
             'theme_location' => 'header-menu',
             'menu_id' => 'primary-menu-1',
@@ -14,7 +61,32 @@
             'menu_class' => 'header__mobile-menu menu',
             'menu_item_class' => 'menu__item',
         )
-    ); ?> --><ul class="header__mobile-menu menu"><li class="menu__item"><a href="#">Грузовые автомобили</a></li><li class="menu__item"><a href="#">Наши работы</a></li><li class="menu__item"><a href="#">Отзывы</a></li><li class="menu__item"><a href="#">Калькулятора</a></li><li class="menu__item"><a href="#">Контакты</a></li></ul><ul class="header__mobile-lang"><li class="header__mobile-item"><a class="header__lang header__lang-active" href="#">EN</a></li><li class="header__mobile-item"><a class="header__lang" href="#">RU</a></li></ul></div></header><main class="main"><section style="width: 100%; height: 100%; background: rgba(0, 0, 0, 0.65); position: absolute; top: 0px; left: 0px; z-index: -1;"></section><div class="container"></div></main><footer class="footer"><div class="footer__container container"><div class="footer__inner"><div class="footer__left"><div class="footer__logo logo"><img src="./images/logo.svg" alt="logo" width="123" height="48"></div><h4 class="h4-title footer__sub-title">Мы поможем вам купить автомобиль из германии</h4></div><!-- <?php wp_nav_menu(
+    ); ?> -->
+            <ul class="header__mobile-menu menu">
+                <li class="menu__item"><a href="#">Грузовые автомобили</a></li>
+                <li class="menu__item"><a href="#">Наши работы</a></li>
+                <li class="menu__item"><a href="#">Отзывы</a></li>
+                <li class="menu__item"><a href="#">Калькулятора</a></li>
+                <li class="menu__item"><a href="#">Контакты</a></li>
+            </ul>
+            <ul class="header__mobile-lang">
+                <li class="header__mobile-item"><a class="header__lang header__lang-active" href="#">EN</a></li>
+                <li class="header__mobile-item"><a class="header__lang" href="#">RU</a></li>
+            </ul>
+        </div>
+    </header>
+    <main class="main">
+        <section
+                style="width: 100%; height: 100%; background: rgba(0, 0, 0, 0.65); position: absolute; top: 0px; left: 0px; z-index: -1;"></section>
+        <div class="container"></div>
+    </main>
+    <footer class="footer">
+        <div class="footer__container container">
+            <div class="footer__inner">
+                <div class="footer__left">
+                    <div class="footer__logo logo"><img src="./images/logo.svg" alt="logo" width="123" height="48">
+                    </div>
+                    <h4 class="h4-title footer__sub-title">Мы поможем вам купить автомобиль из германии</h4></div><!-- <?php wp_nav_menu(
         array(
             'theme_location' => 'footer__list menu',
             'menu_id' => 'footer-menu',
@@ -23,4 +95,57 @@
             'menu_item_class' => 'footer__link menu__item'
         )
     );
-    ?> --><nav><ul class="footer__list menu"><li class="footer__link menu__item"><a href="#">Грузовые автомобили</a></li><li class="footer__link menu__item"><a href="#">Наши работы</a></li><li class="footer__link menu__item"><a href="#">Отзывы</a></li><li class="footer__link menu__item"><a href="#">Пользовательское соглашение</a></li><li class="footer__link menu__item"><a href="#">Калькулятора</a></li><li class="footer__link menu__item"><a href="#">Контакты</a></li></ul></nav><div class="footer__right"><div class="address"><address class="address__item footer__address-item"><div class="address__icon-wrapper"><svg class="icon footer__icon" width="12" height="16"><use href="./i/sprite.svg#icon-map"></use></svg></div><p class="address__text footer__text">Германия, город ровных дорог, улица прямых решений, офисный дом 5, зал с троном 4</p></address><address class="address__item footer__address-item"><div class="address__icon-wrapper"><svg class="icon footer__icon" width="18" height="18"><use href="./i/sprite.svg#icon-phone"></use></svg></div><ul><li><a href="tel:+077774456134" class="address__text footer__text address__phone footer__phone">+07 777 44 56 134</a></li><li><a href="tel:+077774456134" class="address__text footer__text address__phone footer__phone">+07 777 44 56 134</a></li></ul></address></div><ul class="footer__social social"><li><a href="#" class="social__item pseudo-icon pseudo-icon__whats-up" aria-label="Whats up"></a></li><li><a href="#" class="social__item pseudo-icon pseudo-icon__telegram" aria-label="Telegram"></a></li></ul></div></div></div></footer><div class="js-overlay overlay"></div></div><script src="js/jquery.min.js"></script><script src="js/main.js"></script><!-- navigation js --><script src="js/navigation.js"></script></body></html>
+    ?> -->
+                <nav>
+                    <ul class="footer__list menu">
+                        <li class="footer__link menu__item"><a href="#">Грузовые автомобили</a></li>
+                        <li class="footer__link menu__item"><a href="#">Наши работы</a></li>
+                        <li class="footer__link menu__item"><a href="#">Отзывы</a></li>
+                        <li class="footer__link menu__item"><a href="#">Пользовательское соглашение</a></li>
+                        <li class="footer__link menu__item"><a href="#">Калькулятора</a></li>
+                        <li class="footer__link menu__item"><a href="#">Контакты</a></li>
+                    </ul>
+                </nav>
+                <div class="footer__right">
+                    <div class="address">
+                        <address class="address__item footer__address-item">
+                            <div class="address__icon-wrapper">
+                                <svg class="icon footer__icon" width="12" height="16">
+                                    <use href="./i/sprite.svg#icon-map"></use>
+                                </svg>
+                            </div>
+                            <p class="address__text footer__text">Германия, город ровных дорог, улица прямых решений,
+                                офисный дом 5, зал с троном 4</p></address>
+                        <address class="address__item footer__address-item">
+                            <div class="address__icon-wrapper">
+                                <svg class="icon footer__icon" width="18" height="18">
+                                    <use href="./i/sprite.svg#icon-phone"></use>
+                                </svg>
+                            </div>
+                            <ul>
+                                <li><a href="tel:+077774456134"
+                                       class="address__text footer__text address__phone footer__phone">+07 777 44 56
+                                    134</a></li>
+                                <li><a href="tel:+077774456134"
+                                       class="address__text footer__text address__phone footer__phone">+07 777 44 56
+                                    134</a></li>
+                            </ul>
+                        </address>
+                    </div>
+                    <ul class="footer__social social">
+                        <li><a href="#" class="social__item pseudo-icon pseudo-icon__whats-up"
+                               aria-label="Whats up"></a></li>
+                        <li><a href="#" class="social__item pseudo-icon pseudo-icon__telegram"
+                               aria-label="Telegram"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="js-overlay overlay"></div>
+</div>
+<script src="js/jquery.min.js"></script>
+<script src="js/main.js"></script><!-- navigation js -->
+<script src="js/navigation.js"></script>
+</body>
+</html>
