Add slider desktop

--- a/html/our-work.html
+++ b/html/our-work.html
@@ -138,7 +138,7 @@
             <div class="footer__left">
                 
                     <a class="footer__logo logo" href="./index.html">
-                        <img src="./images/logo.svg" alt="logo" width="123" height="48">
+                        <img src="./images/logo.svg" alt="Лого" width="123" height="48">
                     </a>
                 
                 <h4 class="h4-title footer__sub-title">
