--- a/html/index.html
+++ b/html/index.html
@@ -208,7 +208,7 @@
                                             <div class="step__icon-wrapper">
                                                 
     <svg class="icon" width="13" height="21">
-        <use href="./i/sprite.svg#icon-#test"></use>
+        <use href="./i/sprite.svg#icon-arrow-decor"></use>
     </svg>
 
                                             </div>
