Add block video, add section large callback

--- a/html/our-work.html
+++ b/html/our-work.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="./css/jquery.fancybox.min.css">
   <link rel="stylesheet" type="text/css" href="./css/slick.min.css">
   <link rel="stylesheet" type="text/css" href="./css/slick-theme.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lite-youtube-embed/0.2.0/lite-yt-embed.css" integrity="sha512-a/02IBOTwuaufMgBLYpBKvO9y01S8rmk0l0+xSxQfI8PDgmxC1O/DJaH8PfAL43iTqed/V+q6OsCNH+o963PlQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" type="text/css" href="./css/common.min.css">
   <link rel="stylesheet" type="text/css" href="./css/our-work.min.css">
 </head>
@@ -258,6 +259,8 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
 <script src="js/slick.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lite-youtube-embed/0.2.0/lite-yt-embed.js" integrity="sha512-8enKnFefzurzM5t8sFERkldg/nw+Kh8GNXLTesyT6/enZ+N1o6MMchxV3C/0G+4RrAZrE8v61EdJ+BuY6qqapA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/main.js"></script>
 <!-- navigation js -->
 <script src="js/navigation.js"></script>
