--- a/html/our-work.html
+++ b/html/our-work.html
@@ -253,6 +253,15 @@
     </div>
 </div>
 <div class="js-overlay overlay"></div>
+<script>
+    var arrowRightSvg = '<svg class="icon" width="14" height="24" viewBox="0 0 14 24" xmlns="http://www.w3.org/2000/svg">' +
+            '<use href="./i/sprite.svg#icon-arrow-left">' +
+            '</svg>',
+        arrowLeftSvg = '<svg class="icon" width="14" height="24" viewBox="0 0 14 24" xmlns="http://www.w3.org/2000/svg">' +
+            '<use href="./i/sprite.svg#icon-arrow-right">' +
+            '</svg>',
+        closeSvg = '<use href="./i/sprite.svg#icon-arrow-close"></use>';
+</script>
     </div>
 
 
