Fix slider, text

--- a/html/index.html
+++ b/html/index.html
@@ -711,9 +711,10 @@
 
                                     <h2 class="more__title h3-title"><span>Подробнее</span> про нашу работу</h2>
                                 </div>
-                                <p class="sub-title">Оставьте ваши данные, и мы свяжемся с вами в ближайшее время</p>
+                                <div class="text-wrap sub-title">
+                                    <p>Оставьте ваши данные, и мы свяжемся с вами в ближайшее время</p>
+                                </div>
                             </div>
-
                             <div class="dots js-video-dots"></div>
                         </div>
                         <ul class="more__row js-slider-video">
@@ -881,7 +882,7 @@
                     </div>
                 </div>
             </section>
-            <section class="review section">
+            <section class="review max-small section">
                 <div class="container">
                     <div class="heading heading__small review__heading">
                         <h2 class="heading__title h2-title">О нас говорят:</h2>
