--- a/html/index.html
+++ b/html/index.html
@@ -57,15 +57,19 @@
                 <button type="button" data-fancybox data-src="#order-form" class="header__link">Заказать авто</button>
                 
                 <div class="header__dropdown js-dropdown-block">
-                    <button class="header__lang header__lang-active js-button-dropdown">
-                        EN 
+                    <div class="dropdown">
+                        <div class="dropdown__inner">
+                            <button class="dropdown__lang dropdown__lang-active js-button-dropdown">
+                                EN 
     <svg class="icon" width="9" height="8">
         <use href="./i/sprite.svg#icon-arrow-down"></use>
     </svg>
 </button>
-                    <ul class="header__lang-list js-dropdown-item">
-                        <li class="header__lang-item"><a class="header__lang" href="">RU</a></li>
-                    </ul>
+                            <ul class="dropdown__lang-list js-dropdown-item">
+                                <li class="dropdown__lang-item"><a class="dropdown__lang" href="#">RU</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
