Add Trucks page

--- a/html/our-work.html
+++ b/html/our-work.html
@@ -975,7 +975,7 @@
         <use href="./i/sprite.svg#icon-picer"></use>
     </svg>
 
-                            <a href="#" class="button">Наши работы</a>
+                            <button type="button" data-fancybox="" data-src="#order-form" class="button">Заказать авто</button>
                         </div>
                     </div>
                 </div>
