Fix class, add vh for slider Hero, fix first paint for mobile (Hero)

--- a/html/calculator.html
+++ b/html/calculator.html
@@ -130,10 +130,10 @@
     </div>
 </header>
     <main class="main">
-        <section class="calculator page">
+        <section class="calculator content-page">
             <div class="container">
-                <div class="calculator__page-heading page__heading">
-                    <h1 class="page__title h1-title">Калькулятор</h1>
+                <div class="calculator__page-heading content-page__heading">
+                    <h1 class="content-page__title h1-title">Калькулятор</h1>
                 </div>
                 
                 <div>
