--- a/html/privacy.html
+++ b/html/privacy.html
@@ -130,7 +130,7 @@
     </div>
 </header>
     <main class="main">
-        <section class="privacy page">
+        <section class="privacy content-page">
             <div class="container">
                 <h1 class="privacy__title h1-title">Пользовательское соглашение</h1>
                 <div class="privacy__col content">
