--- a/html/trucks.html
+++ b/html/trucks.html
@@ -130,11 +130,11 @@
     </div>
 </header>
     <main class="main">
-        <section class="trucks page">
+        <section class="trucks content-page">
             <div class="container">
-                <div class="trucks__page-heading page__heading">
-                    <h1 class="page__title h1-title">Грузовые автомобили</h1>
-                    <div class="page__text text-wrap">
+                <div class="trucks__page-heading content-page__heading">
+                    <h1 class="content-page__title h1-title">Грузовые автомобили</h1>
+                    <div class="content-page__text text-wrap">
                         <p>Авто из Германии Авто из ГерманииАвто из ГерманииАвто из ГерманииАвто из ГерманииАвто из
                             Германии</p>
                     </div>
