--- a/html/contact.html
+++ b/html/contact.html
@@ -133,8 +133,8 @@
         <section class="contact page">
     
         <div class="container">
-            <div class="contact__page-heading page__heading">
-                <h1 class="page__title h1-title">Контакты</h1>
+            <div class="contact__page-heading content-page__heading">
+                <h1 class="content-page__title h1-title">Контакты</h1>
             </div>
         </div>
     
