--- a/html/our-work.html
+++ b/html/our-work.html
@@ -130,11 +130,11 @@
     </div>
 </header>
         <main class="main">
-            <section class="our-work our-work__page page">
+            <section class="our-work our-work__page content-page">
                 <div class="container">
-                    <div class="our-work__page-heading page__heading">
-                        <h1 class="page__title h1-title">Наши работы</h1>
-                        <div class="page__text text-wrap">
+                    <div class="our-work__page-heading content-page__heading">
+                        <h1 class="content-page__title h1-title">Наши работы</h1>
+                        <div class="content-page__text text-wrap">
                             <p>Авто из Германии Авто из ГерманииАвто из ГерманииАвто из ГерманииАвто из ГерманииАвто из
                                 Германии</p>
                         </div>
