--- a/html/review.html
+++ b/html/review.html
@@ -130,11 +130,11 @@
     </div>
 </header>
     <main class="main">
-        <section class="about-us page">
+        <section class="about-us content-page">
             <div class="container">
-                <div class="about-us__page-heading page__heading">
-                    <h1 class="page__title h1-title">Про нас говорят</h1>
-                    <div class="page__text text-wrap">
+                <div class="about-us__page-heading content-page__heading">
+                    <h1 class="content-page__title h1-title">Про нас говорят</h1>
+                    <div class="content-page__text text-wrap">
                         <p>Авто из Германии Авто из ГерманииАвто из ГерманииАвто из ГерманииАвто из ГерманииАвто из
                             Германии</p>
                     </div>
