--- a/html/trucks.html
+++ b/html/trucks.html
@@ -262,7 +262,7 @@
         
             
                 <li class="our-work__item video">
-                    <a href="/images/preview.png" class="js-lightbox" data-type="image">
+                    <a href="/images/preview.png" class="js-lightbox" data-fancybox="image">
                         <img src="./images/preview.png" width="230" height="172" alt="">
                     </a>
                 </li>
