--- a/html/our-work.html
+++ b/html/our-work.html
@@ -185,7 +185,7 @@
                         
                             
                                 <li class="our-work__item video js-our-work-item">
-                                    <a href="/images/preview.png" class="js-lightbox" data-fancybox="image">
+                                    <a href="/images/preview.png" data-fancybox="image" class="js-lightbox">
                                         <img src="./images/preview.png" width="230" height="172" alt="">
                                     </a>
                                 </li>
