Fix contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -130,7 +130,7 @@
     </div>
 </header>
     <main class="main">
-        <section class="contact page">
+        <section class="contact content-page">
     
         <div class="container">
             <div class="contact__page-heading content-page__heading">
